--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -31,15 +31,14 @@
                 \end{itemize}
         \item Lecture de la review de Mathieu
 \end{itemize}
-~\\
 \noindent Comment la température ambiante influence la fermeture des feuilles? \\
-Comment la fermeture des feuilles affecte la température de celles-ci ?
+Comment la fermeture des feuilles affecte la température de celles-ci?
 
 \section{16 Jan 2018}
 \begin{itemize}
         \item Installation de Debian sur le PC
         \item Installation des logiciels importants sur le PC
-        \item Mise en place de la première manip test pour la \textbf{nutation} : début à \textbf{15h52}, fin à \textbf{10h42} le 17 Jan 2018. Les données sont situées sur Alfred : /mnt/data/manip/Baptiste/test\_16-01-2018. J'ai utilisé la plante "Abby" pour réaliser cette manip. Photo toutes les 90 secondes.
+        \item Mise en place de la première manip test pour la \textbf{nutation}: début à \textbf{15h52}, fin à \textbf{10h42} le 17 Jan 2018. Les données sont situées sur Alfred: /mnt/data/manip/Baptiste/test\_16-01-2018.J'ai utilisé la plante "Abby" pour réaliser cette manip. Photo toutes les 90 secondes.
 \end{itemize}
 
 \section{17 Jan 2018}
@@ -51,18 +50,19 @@ Comment la fermeture des feuilles affecte la température de celles-ci ?
         \item Réalisation du script \textbf{analysisScript.py} qui, à partir de photos stockées dans un dossier, réalise la timeline d'une ligne de pixel et la converti en image binaire
 \end{itemize}
 
-Le lien pour la vidéo : \url{http://uptobox.com/5x80eimcd7xu}\\
+Le lien pour la vidéo: \url{http://uptobox.com/5x80eimcd7xu}\\
 
 Le résultat du script \textbf{analysisScript.py} :\\
 \includegraphics[width = \linewidth]{imTLBWv1.jpg}
 
 \section{18 Jan 2018}
 \begin{itemize}
-        \item Début d'une deuxième manip pour observer la nutation (sur un plus long terme). Début à environ 12h30 \textbf{(heure pc décalée ????)}. Il fait \SI{24.2}{\celsius} dans la pièce, 49\% d'humidité. On utilise la plante "Béa". Les numéro de protocole sont :
+        \item Début d'une deuxième manip pour observer la nutation (sur un plus long terme). Début à environ 12h30 \textbf{(heure pc décalée????)}. Il fait \SI{24.2}{\celsius} dans la pièce, 49\% d'humidité. On utilise la plante "Béa". Les numéro de protocole sont:
                 \begin{itemize}
-                        \item arduino : 21608
-                        \item photos : 21821
+                        \item arduino: 21608
+                        \item photos: 21821
                 \end{itemize}
+        \item Création du script appelé \textbf{anSc3.py} qui utilise la librairie skimage pour analyser les images et réaliser le graphe de mouvement.
 
 \end{itemize}
 
@@ -78,9 +78,9 @@ Le résultat du script \textbf{analysisScript.py} :\\
 \end{center}
 \appendix
 
-\section{Creation du film à partir des images \label{film}}
+\section{Creation du film à partir des images\label{film}}
 \begin{itemize}
-        \item On utilise Thunar pour renommer nos fichier pour que leurs noms soient une suite numérotée ininterrompue (eg. 001.jpg, 002.jpg...)
+        \item On utilise Thunar pour renommer nos fichier pour que leurs noms soient une suite numérotée ininterrompue (eg. 001.jpg, 002.jpg, etc)
         \item On utilise la commande \texttt{ffmpeg -framerate 40 -i \%03d.jpg -c:v libx264 -profile:v high -crf 20 -pix\_fmt yuv420p output.mp4}
 \end{itemize}
 Les fichiers à utiliser sont données par l'option \texttt{-i}, on peut changer le framerate (ici 40 images par secondes).
