Add 19 Jan and start of 22 Jan

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -66,6 +66,12 @@ Le résultat du script \textbf{analysisScript.py} :\\
 
 \end{itemize}
 
+\section{19 Jan 2018}
+Je me suis penché sur le problème du maintien de la température et de l'humidité de la salle de manip avec Arduino (ainsi que la photopériode). J'ai pris en compte la mesure de ces données. Schéma :\\
+\includegraphics[width=0.6\linewidth]{schema_Arduino.png}
+
+\section{20 Jan 2018}
+J'ai refait le focus sur la jeune feuille, il n'était évidemment plus bon au bout de ces 2 jours et demi. $\Rightarrow$ Il serait intéressant de voir si l'auto focus pourrait compenser intelligemment cela.
 
 
 
