Minor change for 22 Jan

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -71,8 +71,11 @@ Je me suis penché sur le problème du maintien de la température et de l'humid
 \includegraphics[width=0.6\linewidth]{schema_Arduino.png}
 
 \section{20 Jan 2018}
-J'ai refait le focus sur la jeune feuille, il n'était évidemment plus bon au bout de ces 2 jours et demi. $\Rightarrow$ Il serait intéressant de voir si l'auto focus pourrait compenser intelligemment cela.
+J'ai refait le focus sur la jeune feuille, il n'était évidemment plus bon au bout de ces 2 jours et demi. $\Rightarrow$ Il serait intéressant de voir si l'auto focus pourrait compenser intelligemment cela.\\
 
+Pour les scripts, je vais essayer de trouver la position du centre de la tige en utilisant une moyenne pondérée par le nombre de pixels consécutifs\\
+
+J'ai modifié les scripts : je les ai séparé en deux : \texttt{TL.py} sert à créer l'image de la timeline, \texttt{Trajec.py} sert à récupérer la position moyenne de la tige. On peut entre les deux scripts retailler l'image.
 
 
 
