--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -82,6 +82,12 @@ J'ai travaillé sur les scripts d'analyse de l'image, de récupération de la tr
 
 J'ai fini le robot arduino qui contrôle la température, l'humidité et les lampes. Je le teste pour la nuit.
 
+\section{30 Jan 2018}
+
+Il y avait un problème dans le robot de contôle. J'ai dû modifier le code d'une part (problème de LOW et HIGH en output pour les relais). De plus, j'ai dû installer la librairie Time sur le pc de la salle de manip. J'ai vérifié que cela fonctionnait bien quelques minutes. Le nouveau code arduino pour le robot est joint dans le dépôt : \texttt{arduino\_Stat.ino}.\\
+
+J'ai remarqué que la lampe numéro 2 (au dessus de la cage) ne fonctionne plus.
+
 
 
 
