--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -95,6 +95,9 @@ Le robot de contrôle était encore bugé. Il se trouve que les relais se bloque
 
 J'ai également retravaillé les codes d'analyse d'images. Ils sont toujours découpés en trois parties, mais maintenant on peut spécifier plusieurs lignes à \texttt{1-TL.py} pour éviter d'avoir à relancer le process des images trop de fois. Par ailleurs, j'utilise maintenant numpy.savetxt pour sauver la trajectoire en csv dans \texttt{2-Traj.py}, ainsi que numpy.loadtxt pour la charger dans \texttt{3-WL.py}. J'ai aussi nettoyé le code de tous les commentaires de débugage inutiles.
 
+\section{01 Fev 2018}
+Le robot de contrôle semble avoir grillé la lampe d'aurore ! De plus, il semble qu'avec le temps l'horloge de l'arduino se décale. Je vais essayer de voir de combien en combien de temps. Pour cela, j'ai pris un screen avec l'heure de l'arduino et l'heure du PC. Celui-ci se situe dans le dossier Pictures de manip.
+
 
 
 
