Notes for the 02 Feb

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -101,6 +101,11 @@ On a réparé le robot, il fonctionne actuellement avec uniquement la lampe de j
 
 J'ai lancé une manip avec deux plantes : Béa et Clara. Début à 17h58. Il fait \SI{24}{\celsius}, la température est régulée par le robot. On a pas encore refait l'arduino chagé de capter la température, l'humidité et la luminosité, donc ces donénes ne seront pas présentes.
 
+\section{02 Fev 2018}
+J'ai refermé le robot de contrôle qui doit marcher normalement. J'ai changé le code arduino pour que le chauffage fonctionne aussi quand minute\%5 = 1 car la température descendait.\\
+
+J'ai aussi commencé à faire le robot de mesure de la température, humidité et luminosité. Pour l'instant il n'y a que la luminosité qui fonctionne, avec un code pris dans les exemples d'adafruit. Il me faut une résistance pour monter le capteur de température et d'humidité.
+
 
 
 
