Commit of day 12 Feb 2018

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -148,7 +148,10 @@ Les nouvelles plantes s'appellent :
 \end{enumerate}
 \end{multicols}
 
+\section{12 Fev 2018}
+J'ai oublié d'inscrire que le 08 Fev 2018, j'ai lancé une manip avec deux plantes : Béa et Clara. Je crois qu'elles ont beaucoup bougé pendant la prise de photos. L'expé est toujours en train de tourner.\\
 
+J'ai cherché comment faire fonctionner nos 2 capteurs de luminosité en même temps sur le même arduino. Il semble donc qu'on puisse relier les broches SCL des deux capteurs ensemble avec une résistance, de même pour SDA. J'ai trouvé cette info sur \url{http://www.learningaboutelectronics.com/Articles/Multiple-I2C-devices-to-an-arduino-microcontroller.php}
 
 
 
