--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -25,32 +25,32 @@
 \section{15 Jan 2018}
 
 \begin{itemize}
-        \item Début d'installation sur le PC
-        \item Cassage de ArchLinux
-        \item Rangement de la salle de manip et mise en place de la salle de manip
-                \begin{itemize}
-                        \item Raccourcissement des plus longues barres de la cage qui gênaient.
-                        \item Réorganisation de la salle
-                \end{itemize}
-        \item Lecture de la review de Mathieu
+    \item Début d'installation sur le PC
+    \item Cassage de ArchLinux
+    \item Rangement de la salle de manip et mise en place de la salle de manip
+    \begin{itemize}
+        \item Raccourcissement des plus longues barres de la cage qui gênaient.
+        \item Réorganisation de la salle
+    \end{itemize}
+    \item Lecture de la review de Mathieu
 \end{itemize}
 \noindent Comment la température ambiante influence la fermeture des feuilles? \\
 Comment la fermeture des feuilles affecte la température de celles-ci?
 
 \section{16 Jan 2018}
 \begin{itemize}
-        \item Installation de Debian sur le PC
-        \item Installation des logiciels importants sur le PC
-        \item Mise en place de la première manip test pour la \textbf{nutation}: début à \textbf{15h52}, fin à \textbf{10h42} le 17 Jan 2018. Les données sont situées sur Alfred: /mnt/data/manip/Baptiste/test\_16-01-2018.J'ai utilisé la plante "Abby" pour réaliser cette manip. Photo toutes les 90 secondes.
+    \item Installation de Debian sur le PC
+    \item Installation des logiciels importants sur le PC
+    \item Mise en place de la première manip test pour la \textbf{nutation}: début à \textbf{15h52}, fin à \textbf{10h42} le 17 Jan 2018. Les données sont situées sur Alfred: /mnt/data/manip/Baptiste/test\_16-01-2018.J'ai utilisé la plante "Abby" pour réaliser cette manip. Photo toutes les 90 secondes.
 \end{itemize}
 
 \section{17 Jan 2018}
 \begin{itemize}
-        \item Arrêt de la manip \textbf{test\_16-01-2018} à \textbf{10h42}
-        \item Arrosage des plantes
-        \item Récupération des données de la manip
-        \item Création du film à partir des données de la manip (\textit{cf}\textsc{Protocole}~\ref{film})
-        \item Réalisation du script \textbf{analysisScript.py} qui, à partir de photos stockées dans un dossier, réalise la timeline d'une ligne de pixel et la converti en image binaire
+    \item Arrêt de la manip \textbf{test\_16-01-2018} à \textbf{10h42}
+    \item Arrosage des plantes
+    \item Récupération des données de la manip
+    \item Création du film à partir des données de la manip (\textit{cf}\textsc{Protocole}~\ref{film})
+    \item Réalisation du script \textbf{analysisScript.py} qui, à partir de photos stockées dans un dossier, réalise la timeline d'une ligne de pixel et la converti en image binaire
 \end{itemize}
 
 Le lien pour la vidéo: \url{http://uptobox.com/5x80eimcd7xu}\\
@@ -60,12 +60,12 @@ Le résultat du script \textbf{analysisScript.py} :\\
 
 \section{18 Jan 2018}
 \begin{itemize}
-        \item Début d'une deuxième manip pour observer la nutation (sur un plus long terme). Début à environ 12h30 \textbf{(heure pc décalée????)}. Il fait \SI{24.2}{\celsius} dans la pièce, 49\% d'humidité. On utilise la plante "Béa". Les numéro de protocole sont:
-                \begin{itemize}
-                        \item arduino: 21608
-                        \item photos: 21821
-                \end{itemize}
-        \item Création du script appelé \textbf{anSc3.py} qui utilise la librairie skimage pour analyser les images et réaliser le graphe de mouvement.
+    \item Début d'une deuxième manip pour observer la nutation (sur un plus long terme). Début à environ 12h30 \textbf{(heure pc décalée????)}. Il fait \SI{24.2}{\celsius} dans la pièce, 49\% d'humidité. On utilise la plante "Béa". Les numéro de protocole sont:
+    \begin{itemize}
+        \item arduino: 21608
+        \item photos: 21821
+    \end{itemize}
+    \item Création du script appelé \textbf{anSc3.py} qui utilise la librairie skimage pour analyser les images et réaliser le graphe de mouvement.
 
 \end{itemize}
 
@@ -126,7 +126,7 @@ J'ai rempoté toutes les petites caramboles (18) dans de plus grands pots. J'ai 
 Les nouvelles plantes s'appellent :
 
 \begin{multicols}{4}
-\begin{enumerate}
+    \begin{enumerate}
         \item Athéna
         \item Borée
         \item Chloris
@@ -145,7 +145,7 @@ Les nouvelles plantes s'appellent :
         \item Pan
         \item Qébahout
         \item Rê
-\end{enumerate}
+    \end{enumerate}
 \end{multicols}
 
 \section{12 Fev 2018}
@@ -154,26 +154,30 @@ J'ai oublié d'inscrire que le 08 Fev 2018, j'ai lancé une manip avec deux plan
 J'ai cherché comment faire fonctionner nos 2 capteurs de luminosité en même temps sur le même arduino. Il semble donc qu'on puisse relier les broches SCL des deux capteurs ensemble avec une résistance, de même pour SDA. J'ai trouvé cette info sur \url{http://www.learningaboutelectronics.com/Articles/Multiple-I2C-devices-to-an-arduino-microcontroller.php}
 
 
+\section{15 Fev 2018}
+Lancement d'une manip avec deux plantes : Diana et Jupiter. Je l'ai lancée à 12h11.\\
+
+Il y a eu beaucoup de changements dnas les scripts d'analyse des images. Maintenant, pour créer la timeline, il faut cliquer dans les images à la hauteur de la ligne que l'on veut prendre. L'intervalle entre 2 "picking" est une des entrées du script.  De plus, le script prend en entrée deux indices pour crop l'image de manière à réduire la taille du total et avoir une distinction de la tige plus nette. \textit{cf} \textsc{Protocole}~\ref{anaNut} pour plus de détails sur l'utilisation.\\ J'ai aussi enlevé le deuxième script \texttt{2-Traj.py} car ceci est fait dans le premier à présent.
 
 \newpage
 \begin{center}
-        {\Huge Protocoles}
+    {\Huge Protocoles}
 \end{center}
 \appendix
+\setcounter{secnumdepth}{1}
 
 \section{Creation du film à partir des images\label{film}}
 \begin{enumerate}
-        \item On utilise Thunar pour renommer nos fichier pour que leurs noms soient une suite numérotée ininterrompue (eg. 001.jpg, 002.jpg, etc)
-        \item On utilise la commande \texttt{ffmpeg -framerate 40 -i \%04d.jpg -c:v libx264 -profile:v high -crf 20 -pix\_fmt yuv420p output.mp4}
+    \item On utilise Thunar pour renommer nos fichier pour que leurs noms soient une suite numérotée ininterrompue (eg. 001.jpg, 002.jpg, etc)
+    \item On utilise la commande \texttt{ffmpeg -framerate 40 -i \%04d.jpg -c:v libx264 -profile:v high -crf 20 -pix\_fmt yuv420p output.mp4}
 \end{enumerate}
 Les fichiers à utiliser sont données par l'option \texttt{-i}, on peut changer le framerate (ici 40 images par secondes).
 
 \section{Analyse des images de la nutation\label{anaNut}}
 \begin{enumerate}
-        \item On a mis toutes les photos du film dans un dossier. On récupère le chemin d'accès à ce dossier.
-        \item On utilise la commande : \texttt{python 1-TL.py Path Width Lines} avec \texttt{Path} est la localisation du dossier, \texttt{Width} est la largeur des photos, et \texttt{Line} est une suite de lignes de pixel à extraire des photos (e.g. 500,600,700 sans espace, séparés par des virgules)
-        \item Puis \texttt{python 2-Traj.py Path Picture dt} avec \texttt{Path} la localisation du dossier, \texttt{Picture} est le nom de l'image générée par \texttt{1-TL.py}, et \texttt{dt} est le temps entre chaque photo.
-        \item Enfin \texttt{python 3-WL.py Path CSV} avec \texttt{Path} la localisation du dossier, \texttt{CSV} le nom du fichier csv créé par \texttt{2-Trajec.py}
+    \item On a mis toutes les photos du film dans un dossier. On récupère le chemin d'accès à ce dossier.
+    \item On utilise la commande : \texttt{python 1-TL.py Path ReadEvery WindowScale XStart XStop SpacePic} avec \texttt{Path} est la localisation du dossier, \texttt{ReadEvery} est l'intervalle auquel on veut cliquer sur les photos pour sélectionner la ligne, \texttt{WindowScale} est un coefficient pour diminuer la taille de l'image affichée, \texttt{XStart} est le pixel à partir duquel on veut crop l'image, \texttt{XStop} est le pixel jusqu'auquel on veut crop l'image, et \texttt{SpacePic} est l'intervalle de temps entre les images.
+    \item Enfin \texttt{python 2-WL.py Path CSV} avec \texttt{Path} la localisation du dossier, \texttt{CSV} le nom du fichier csv créé par \texttt{2-Trajec.py}
 \end{enumerate}
 
 
