Update to day 19 Feb

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -159,6 +159,11 @@ Lancement d'une manip avec deux plantes : Diana et Jupiter. Je l'ai lancée à 1
 
 Il y a eu beaucoup de changements dnas les scripts d'analyse des images. Maintenant, pour créer la timeline, il faut cliquer dans les images à la hauteur de la ligne que l'on veut prendre. L'intervalle entre 2 "picking" est une des entrées du script.  De plus, le script prend en entrée deux indices pour crop l'image de manière à réduire la taille du total et avoir une distinction de la tige plus nette. \textit{cf} \textsc{Protocole}~\ref{anaNut} pour plus de détails sur l'utilisation.\\ J'ai aussi enlevé le deuxième script \texttt{2-Traj.py} car ceci est fait dans le premier à présent.
 
+\section{19 Fev 2018}
+Arrêt de la manip avec Diana et Jupiter. Récupération et traitement des données.\\
+Ajout de la sauvegarde des photos avec ligne rouge sélectionnée dasn \texttt{1-TL.py}.\\
+Finition de l'Arduino sensor et installation dasn la serre. Le script python de récupération des données fonctionne. Il est situé dans \texttt{/mnt/data/manips/Baptiste/ArdSense}
+
 \newpage
 \begin{center}
     {\Huge Protocoles}
