--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -168,7 +168,9 @@ Finition de l'Arduino sensor et installation dasn la serre. Le script python de 
 J'ai fini de mettre en place l'Arduno Sensor qui enregistre maintenant la température, l'humidité et la luminosité. J'ai disposé les capteurs sur une petite plaque de carton, principalement pour maintenir le capteur de luminosité à plat. J'ai disposé ce carton sur une des deux potences pour que la mesure de la luminosité soit proche de celle reçue par la plante.\\
 J'ai dû redémmarer l'ordinateur parce qu'un appareil photo n'était pas détecté par le pc. En faisant cela, l'heure de l'ordi a changé...\\
 
-Début de la manip avec Béa et Carla à 12h40. Je teste cette fois de tenir les autres feuilles en les entourant de fil. Je teste aussi le nouveau support de fond noir.
+Début de la manip avec Béa et Carla à 12h40. Je teste cette fois de tenir les autres feuilles en les entourant de fil. Je teste aussi le nouveau support de fond noir.\\
+
+Changement de manip : j'ai relancé une manip (toujours avec Béa et Clara), cependant j'ai éloigné les plantes de l'appareil photo. Ainsi, le focus est bon, ainsi que le niveau de zoom. Le début est à 14h56. L'échellle est présente sur deux photos autour de 16h46.
 
 \newpage
 \begin{center}
