Update to day 2 March 2018

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -178,6 +178,14 @@ J'ai travaillé sur un modèle qui décrit le mouvement de nutation de la tige c
 J'ai lancé une manip (toujours les mêmes conditions : \SI{24}{\celsius}, 12h de photopériode) avec Béa et Elisabeth à 15h42.
 
 
+\section{02 Mar 2018}
+J'ai refait la mise au point des appareils photos sur les manips.\\
+
+J'ai rempoté la plus grande des plantes dans un pot plus grand. De plus, je l'ai taillée pour qu'elle est une taille plus facile à travailler, et je teste de faire une bouture avec ce que j'ai enlevé de la taille car le bout avait l'air bien vivace.\\
+J'ai aussi remis un peu de terre dans les pots qui en manquaient.\\
+J'ai repéré plusieurs caramboles qui sont dans des petits pots et qu'il faudra rempoter prochainement.
+
+
 \newpage
 \begin{center}
     {\Huge Protocoles}
