Start of 06 Mar. 2018

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -185,6 +185,11 @@ J'ai rempoté la plus grande des plantes dans un pot plus grand. De plus, je l'a
 J'ai aussi remis un peu de terre dans les pots qui en manquaient.\\
 J'ai repéré plusieurs caramboles qui sont dans des petits pots et qu'il faudra rempoter prochainement.
 
+\section{06 Mar 2018}
+J'ai rempoté deux plantes qui en avaient besoin (une petit pot, une presque plus de terre). Je vérifierai si d'autres doivent être rempotées.\\
+Il fait presque \SI{25}{\celsius} dans la pièce ce matin parce que le temps s'est réchauffé et que le radiateur supplémentaire chauffait trop.\\
+
+J'ai arrêté la manip sur [009,002] parce que la nutation était finie. J'ai remarqué que sur cette manip, certaines photos sont très sombres indépendament des periodes de jour/nuit. C'est sur cette manip que je testais le nouveau fond bleu.
 
 \newpage
 \begin{center}
