--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -191,6 +191,16 @@ Il fait presque \SI{25}{\celsius} dans la pièce ce matin parce que le temps s'e
 
 J'ai arrêté la manip sur [009,002] parce que la nutation était finie. J'ai remarqué que sur cette manip, certaines photos sont très sombres indépendament des periodes de jour/nuit. C'est sur cette manip que je testais le nouveau fond bleu.
 
+\section{12 Mar 2018}
+Les manips ont été arrêtées jeudi dernier. J'essaie de faire descendre la température de la pièce à \SI{20}{\celsius} sans grand succès (\SI{22}{\celsius} environ actuellement) pour lancer une nouvelle série de manips à cette température. \\
+La première expé utilisera deux plantes : Béa et Fleur.\\
+J'attends avant de lancer la manip car le robot de contrôle de la température et de la lumière ne fonctionne plus. Je l'ai modifié pour qu'il contrôle les trois lampes :
+\begin{description}
+    \item [\SI{2700}{\kelvin}] lampe d'aube : de 8h à 20h
+    \item [\SI{6000}{\kelvin} \#1] lampe de jour : de 9h à 19h
+    \item [\SI{6000}{\kelvin} \#2] lampe de zénith : de 11h à 13h
+\end{description}
+
 \newpage
 \begin{center}
     {\Huge Protocoles}
