--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -201,6 +201,12 @@ J'attends avant de lancer la manip car le robot de contrôle de la température 
     \item [\SI{6000}{\kelvin} \#2] lampe de zénith : de 11h à 13h
 \end{description}
 
+\section{14 Mar 2018}
+Le robot doit (enfin!) marcher, maintenant chacun des câbles est lié à 2 relais : un statique qui ne craint pas le retour de courant des lampes et des charges inductives, et un mécanique qui coupe correctement le courant. Je dois aller voir Arnaud cet après-midi pour mettre tout cela en boîte.\\
+
+Hier, j'ai lancé une manip avec Béa et Fleur à 18h10 hier soir. J'ai constaté ce matin que le flash externe semble parfois avoir des problèmes de régulation : certaines photos sont complètement noires.
+
+
 \newpage
 \begin{center}
     {\Huge Protocoles}
