Start of day 15 March 2018

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -206,6 +206,13 @@ Le robot doit (enfin!) marcher, maintenant chacun des câbles est lié à 2 rela
 
 Hier, j'ai lancé une manip avec Béa et Fleur à 18h10 hier soir. J'ai constaté ce matin que le flash externe semble parfois avoir des problèmes de régulation : certaines photos sont complètement noires.
 
+\section{15 Mar 2018}
+Je laisse tourner la manip en cours car Béa nute bien. L'autre plante a malheureusement un defaut avec e flash qu'il faudra régler (à voir dans les configurations de l'appareil photo). Je vais interrompre la manip ce soir car je ne pourrait pas être là demain.\\
+
+À l'heure actuelle, ArdStat n'est pas prêt (et pas sûr qu'il le soit aujourd'hui car je pense qu'on aura pas le boîtier.)\\
+
+J'ai refait les analyses des manips précédentes. J'ai fait un changement dasn le code : les axes des graphes finaux sont définis manuellement pour enlever les valeurs extrèmes abérantes et ainsi voir l'allure de la courbe.
+
 
 \newpage
 \begin{center}
