Start of day 20 Mar 2018

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -204,7 +204,7 @@ J'attends avant de lancer la manip car le robot de contrôle de la température 
 \section{14 Mar 2018}
 Le robot doit (enfin!) marcher, maintenant chacun des câbles est lié à 2 relais : un statique qui ne craint pas le retour de courant des lampes et des charges inductives, et un mécanique qui coupe correctement le courant. Je dois aller voir Arnaud cet après-midi pour mettre tout cela en boîte.\\
 
-Hier, j'ai lancé une manip avec Béa et Fleur à 18h10 hier soir. J'ai constaté ce matin que le flash externe semble parfois avoir des problèmes de régulation : certaines photos sont complètement noires.
+Hier, j'ai lancé une manip avec Béa et Fleur à 18h10 hier soir, condition \SI{20}{\celsius} (ou à peu près). J'ai constaté ce matin que le flash externe semble parfois avoir des problèmes de régulation : certaines photos sont complètement noires.
 
 \section{15 Mar 2018}
 Je laisse tourner la manip en cours car Béa nute bien. L'autre plante a malheureusement un defaut avec e flash qu'il faudra régler (à voir dans les configurations de l'appareil photo). Je vais interrompre la manip ce soir car je ne pourrait pas être là demain.\\
@@ -212,6 +212,13 @@ Je laisse tourner la manip en cours car Béa nute bien. L'autre plante a malheur
 À l'heure actuelle, ArdStat n'est pas prêt (et pas sûr qu'il le soit aujourd'hui car je pense qu'on aura pas le boîtier.)\\
 
 J'ai refait les analyses des manips précédentes. J'ai fait un changement dasn le code : les axes des graphes finaux sont définis manuellement pour enlever les valeurs extrèmes abérantes et ainsi voir l'allure de la courbe.
+
+\section{20 Mar 2018}
+Hier j'ai arrêté la manip en cours.\\
+Le problème du flash de lappareil photo a été réglé : le problème était avec l'ISO et le TTL.\\
+
+J'ai lancé une nouvelle manip avec Béa et Élizabeth hier à 15h36, toujours en condition \SI{20}{\celsius} (ou presque).
+
 
 
 \newpage
