03 April + start of 04 April

--- a/labNotebook.tex
+++ b/labNotebook.tex
@@ -219,6 +219,25 @@ Le problème du flash de lappareil photo a été réglé : le problème était a
 
 J'ai lancé une nouvelle manip avec Béa et Élizabeth hier à 15h36, toujours en condition \SI{20}{\celsius} (ou presque).
 
+\section{28 Mar 2018}
+J'ai arrêté la manip en cours aujourd'hui à 10h36. Je crois que l'une d'entre elles n'a pas nuté. L'autre était de travers et doit sortir du fond.\\
+
+Il faudra régler l'heure du PC à cause du changement d'heure.\\
+
+Je suis en train de travailler avec Arnaud pour mettre ArdStat dans un boitier qui serait définitif
+
+\section{03 Avril 2018}
+Le robot fonctionne, je vais lui rajouter deux rallonges pour qu'il soit complet. Je lancerai ensuite une manip à \SI{28}{\celsius}, 60\% d'humidité dans la pièce.\\ Effectivement le robot est opérationnel avec toutes ses prises, et fais monter la température et l'humidité doucement.\\
+
+Plusieurs feuilles sont prêtes pour de prochaines manips.
+
+\section{04 Avril 2018}
+La température est stabilisée à \SI{28}{\celsius} dans la pièce.\\
+J'ai donc lancé une manip avec Gabrielle et Hélène à 11h16.\\
+
+J'ai remarqué que depuis la montée de température, les plantes qui avaient perdu leurs feuilles semblent revenir à la vie avec plusieurs petites feuilles sur les anciens bourgeons secondaires.\\
+D'autre part, j'ai l'impression que la nutation est plus rapide à cette température (en tout cas pour Gabrielle au début).
+
 
 
 \newpage
